@@ -740,6 +740,9 @@ Release 2.6.0 - UNRELEASED
     YARN-2758. Update TestApplicationHistoryClientService to use the new generic
     history store. (Zhijie Shen via xgong)
 
+    YARN-2741. Made NM web UI serve logs on the drive other than C: on Windows. (Craig
+    Welch via zjshen)
+
 Release 2.5.1 - 2014-09-05
 
   INCOMPATIBLE CHANGES
